# gpuhedge

./: .bumpversion.cfg  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  provider_report.md
.github/workflows/: ci.yml  release.yml
assets/: gpuhedge_demo.cast
benchmarks/2026-07-moss/: analysis.py  methodology.md  results.md
benchmarks/2026-07-moss/sanitized-traces/: costs.jsonl  live_hedge.jsonl  moss_rounds.jsonl  qualification.jsonl  setup.jsonl  state_aware.jsonl  validation.jsonl
benchmarks/2026-07-queue-cutover/: analysis.py  preregistration.yaml  results.md
benchmarks/2026-08-cascade/: preregistration.yaml
deploy/: README.md
deploy/cerebrium/: cerebrium.toml  main.py
deploy/modal/: app.py  moss_core.py
deploy/runpod/: .env.example  moss_worker.py  requirements.txt
docs/: adding-a-provider.md  architecture.md  cancellation-semantics.md  cost-accounting.md  policies.md  provider-capabilities.md  security.md
scripts/: record_demo_svg.py  render_boxplot_asset.py  run_stage2_blocks.sh  run_validation.sh  sanitize_traces.py
src/gpuhedge/: __init__.py  __main__.py  auth.py  cli.py  config.py  router.py
src/gpuhedge/backends/: __init__.py  base.py  cerebrium_backend.py  http_backend.py  modal_backend.py  runpod_backend.py  sim_backend.py
src/gpuhedge/benchmark/: __init__.py  cancel_audit.py  cascade.py  controller.py  demo.py  live_hedge.py  live_stage.py  qualify.py  replay.py  report.py  round.py  state_aware.py  validation.py
src/gpuhedge/config/: benchmark.example.yaml  benchmark.yaml  demo.yaml
src/gpuhedge/policies/: __init__.py
src/gpuhedge/telemetry/: __init__.py  costs.py  ledger.py  trace.py
src/gpuhedge/validators/: __init__.py  audio.py  registry.py
tests/: test_gpuhedge.py  test_policies_sim.py
traces/: cancel_audit.jsonl  ledger.jsonl
